styles/base.css
:root {
  --border-color: #bbb;
  --heading-font: "Montserrat Alternates", sans-serif;
  --text-color: #fff;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

header {
  font-family: var(--heading-font);
}

#course-title, h2, footer {
  display: block;
  background-color: rgb(56, 114, 173);
  color: var(--text-color);
  padding: 10px;
  text-align: center;
}

nav {
  background-color: #333;
  margin: 0 auto;
  width: 100%;
}

nav ul{
  list-style-type: none;
  display: flex;
  justify-content: space-between;
}

nav a {
  display: block;
  text-align: center;
  color: var(--text-color);
  text-decoration: none;
  padding: 10px;
}

nav a:hover {
  background-color: #055705;
  border: 1px solid var(--border-color);
  color: rgb(255, 255, 0);
}

h1 {
  color: #333;
  font-family: "Montserrat Alternates", sans-serif;
  text-align: center;
  padding: 1.5rem;
  grid-column: span 3;
}

body {
  height: 100%;
  margin: 0 auto;
}

main {
  display: grid;
  grid-template-columns: 2fr 1fr;
}

.card h2 {
  border-top-left-radius: .5rem;
  border-top-right-radius: .5rem;
}

.card {
  width: auto;
  border: 1px solid var(--border-color);
  margin: 2px;
  border-radius: .5rem;
}

.profile {
  width: auto;
  border-radius: .5rem;
  margin: auto;
}

.profile img{
  float: right;
  width: 150px;
  margin: 10px;
  border: 1px solid var(--border-color);
}

p {
  margin: 10px;
}

h3 {
  text-align: center;
  border-bottom: 1px solid var(--border-color);
  grid-column: span 3;
  margin: 10px;
}

.flag {
  display: grid;
  grid-template-columns: auto auto 1fr;
}

.flag img {
  float: left;
  margin: 10px;
  width: 150px;
}

figcaption {
  max-width: 100px;
  margin: auto;
  font-style: italic;
  text-align: center;
}

#lastModified {
  color: rgb(255, 255, 0);
}

.resources li{
  margin-left: 2rem;
  justify-content: center;
}

